# simple_telegram_payment

./: .env.examlpe  .gitignore  config.py  main.py  pyproject.toml
handlers/: payment.py
keyboards/: payment.py
